<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Riot API Test</string>
    <string name="action_settings">Settings</string>
    <string name="champion_name">Enter Champion Name</string>
    <string name="enter_champion_name">Enter</string>
    <string name="champion_name_list">Champion Names and Info</string>
    <string name="change_champion_name">Change</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="missing_champion_name">Enter a Champion Name</string>
    <string name="invalid_champion_name">Invalid Champion Name</string>
    <string name="delete_all_champions">Delete All Champions</string>
    <string name="confirm_action">Are You Sure?</string>
    <string name="get_champion_info">Info</string>
    <string name="go_to_website">Web</string>
    <string name="champion_wiki_page">http://leagueoflegends.wikia.com/wiki/</string>
    <string name="champion_name_info">Champion Name</string>
    <string name="champion_attackRank">Attack Rank:</string>
    <string name="champion_defenseRank">Defense Rank:</string>
    <string name="champion_difficultyRank">Difficulty Rank:</string>
    <string name="champion_magicRank">Magic Rank:</string>
    <string name="champion_freeToPlay">Free To Play?</string>
    <string name="title_activity_champ_info">ChampInfo</string>
    <string name="delete_button">Delete</string>

</resources>
